--- a/WZHDotNetTrainingBatch2.ConsoleApp/WZHDotNetTrainingBatch2.ConsoleApp.csproj
+++ b/WZHDotNetTrainingBatch2.ConsoleApp/WZHDotNetTrainingBatch2.ConsoleApp.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WZHDotNetTrainingBatch2.Database\WZHDotNetTrainingBatch2.Database.csproj" />
+  </ItemGroup>
+
 </Project>
