--- a/WZHDotNetTrainingBatch2.MiniPos.ConsoleApp/WZHDotNetTrainingBatch2.MiniPos.ConsoleApp.csproj
+++ b/WZHDotNetTrainingBatch2.MiniPos.ConsoleApp/WZHDotNetTrainingBatch2.MiniPos.ConsoleApp.csproj
@@ -1,10 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
@@ -16,5 +18,9 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\WZHDotNetTrainingBatch2.MiniPos.DataBase\WZHDotNetTrainingBatch2.MiniPos.DataBase.csproj" />
 	</ItemGroup>
 </Project>
