--- a/WZHDotNetTrainingBatch2.ConsoleApp/WZHDotNetTrainingBatch2.ConsoleApp.csproj
+++ b/WZHDotNetTrainingBatch2.ConsoleApp/WZHDotNetTrainingBatch2.ConsoleApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
       <PrivateAssets>all</PrivateAssets>
